--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br> I'm a Passionate Web Devoloper</h1>
+                    <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>Passionate Web Devoloper</h1>
 
                     <a href="#" class="button">Hire Me</a>
                 </div>
@@ -140,9 +140,7 @@
                 <h2 class="section-title">Certificates</h2>
 
                 <div class="work__container bd-grid">
-                    <div class="work__img">
-                        <img src="java 90%.jpg" alt="">
-                    </div>
+                    
                     <div class="work__img">
                         <img src="udemy html.jpg" alt="">
                     </div>
