--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>Passionate Web Devoloper</h1>
+                    <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>Web Devoloper</h1>
 
                     <a href="#" class="button">Hire Me</a>
                 </div>
