--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="sumacircle.jpg" alt="">
+                    
                 </div>
             </section>
 
@@ -61,6 +61,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
+                        <img src="suma image.jpg" alt="">
                     </div>
                    
                     <div>
