--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Suma</a>
+                    <a href="#" class="nav__logo">Suma's Portfolio</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>Web Devoloper</h1>
+                    <h1 class="home__title">Hi!<br>I am <span class="home__title-color">Suma Pravallika</span><br>And I'm a Passionate Web Devoloper</h1>
 
                     <a href="#" class="button">Hire Me</a>
                 </div>
