--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Suma's Portfolio website </title>
+        <title>Suma's Portfolio  </title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi!<br>I am <span class="home__title-color">Suma Pravallika</span><br>And I'm a Passionate Web Devoloper</h1>
+                    <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>I'm a Passionate Web Devoloper.</h1>
 
                     <a href="#" class="button">Hire Me</a>
                 </div>
@@ -66,11 +66,10 @@
                    
                     <div>
                         <h2 class="about__subtitle">I'am Suma Pravallika</h2>
-                        <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.</p>          
+                        <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I have secured 985/1000 marks in intermediate and 9.7/10 in SSC.I'm interested in developing and designing websites.</p>          
                     </div>                                  
                 </div>
             </section>
-
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
