--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                    
                     <div>
                         <h2 class="about__subtitle">I'am Suma Pravallika</h2>
-                        <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I have secured 985/1000 marks in intermediate and 9.7/10 in SSC.I'm interested in developing and designing websites.</p>          
+                        <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I have secured 985/1000 marks in intermediate and 9.7/10 in SSC.I'm very much interested in developing and designing websites.</p>          
                     </div>                                  
                 </div>
             </section>
