--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>I'm a Passionate Web Devoloper.</h1>
 
-                    <a href="#" class="button">Hire Me</a>
+                    <a href=""https://www.linkedin.com/in/sumapravallika-gunji-7657b51a8 class="button">Hire Me</a>
                 </div>
 
                 <div class="home__social">
