--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>I'm a Passionate Web Devoloper.</h1>
 
-                    <a href=""https://www.linkedin.com/in/sumapravallika-gunji-7657b51a8 class="button">Hire Me</a>
+                    <a href="https://sumapravallikagunji@gmail.com/" class="button">Hire Me</a>
                 </div>
 
                 <div class="home__social">
@@ -66,7 +66,9 @@
                    
                     <div>
                         <h2 class="about__subtitle">I'am Suma Pravallika</h2>
-                        <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I have secured 985/1000 marks in intermediate and 9.7/10 in SSC.I'm very much interested in developing and designing websites.</p>          
+                        <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I'm very much interested in developing and designing websites.</p>
+                        <p class="about__text"> INTERMEDIATE : 985/1000 Marks </p>
+                        <p class="about__text"> SSC : 9.7/10 CGPA </p>
                     </div>                                  
                 </div>
             </section>
