--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/sumapravallika-gunji-7657b51a8" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://github.com/sumapravallika/portfolio1" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">    
@@ -171,7 +171,7 @@
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
-                <h2 class="section-title">Contact</h2>
+                <h2 class="section-title">Kindly Drop Your Details.</h2>
 
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
