--- a/index.html
+++ b/index.html
@@ -157,14 +157,17 @@
                     <div class="work__img">
                         <img src="excel workshop.jpg" alt="">
                     </div>
-                    <div class="work_img">
+                    <div class="work__img">
                         <img src="iot and embedded.jpg" alt="">
                     </div>
-                    <div class="work_img">
+                    <div class="work__img">
                         <img src="hunky brain quiz.jpg" alt="">
                     </div>
-                    <div class="work_img">
+                    <div class="work__img">
                         <img src="java python.jpg" alt="">
+                    </div>
+                    <div class="work__img">
+                        <img src="java 90%.jpg" alt="">
                     </div>
                 </div>
             </section>
