--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <img src="java python.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="java 90%.jpg" alt="">
+                        <img src="suma guinnes.jpg" alt="">
                     </div>
                 </div>
             </section>
