--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi There!<br>I am <span class="home__title-color">Suma Pravallika</span><br>I'm a Passionate Web Devoloper.</h1>
 
-                    <a href="https://sumapravallikagunji@gmail.com/" class="button">Hire Me</a>
+                    <a href="https://www.linkedin.com/in/sumapravallika-gunji-7657b51a8" class="button">Hire Me</a>
                 </div>
 
                 <div class="home__social">
@@ -69,7 +69,7 @@
                         <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I'm very much interested in developing and designing websites.</p>
                         <p class="about__text"> INTERMEDIATE : 985/1000 Marks </p>
                         <p class="about__text"> SSC : 9.7/10 CGPA </p>
-                        <p class='about__text"><a href="https://sumapravallika-coffeeshop.tiiny.site"> Suma's Coffeeshop. </p>
+                        <p class='about__text"><a href="https://sumapravallika-coffeeshop.tiiny.site"> Suma's Coffeeshop.</a> </p>
                     </div>                                  
                 </div>
             </section>
