--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
                     <div>
                         <h2 class="about__subtitle">I'am Suma Pravallika</h2>
                         <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life,also created many beautiful websites.I have built a face recognition application using python in Guvi.I'm very much interested in developing and designing websites.</p>
+                        <p class="about__text">Hobbies : Basket ball,Singing.
                         <p class="about__text"> INTERMEDIATE : 985/1000 Marks </p>
                         <p class="about__text"> SSC : 9.7/10 CGPA </p>
-                        <a href="https://sumapravallika-coffeeshop/" class="button">suma coffee</a>
+                        <a href="https://sumapravallika-coffeeshop/" class="button">Visit suma's coffee world:)</a>
                         
                     </div>                                  
                 </div>
@@ -133,7 +134,6 @@
                     </div>
                    
                     <div> 
-                        <a href="https://sumapravallika-coffeeshop/" class="button">suma coffee</a>
                         <img src="suma guinnes.jpg" alt="" class="skills__img">
                     </div>
                 </div>
