--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <p class="about__text">Hobbies : Basket ball,Singing.
                         <p class="about__text"> INTERMEDIATE : 985/1000 Marks </p>
                         <p class="about__text"> SSC : 9.7/10 CGPA </p>
-                        <a href="https://sumapravallika-coffeeshop/" class="button">Visit suma's coffee world:)</a>
+                        <a href="https://sumapravallika-coffeeshop.tiiny.site" class="button">Visit suma's coffee world:)</a>
                         
                     </div>                                  
                 </div>
