--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                         <h2 class="about__subtitle">I'am Suma Pravallika</h2>
                         <p class="about__text">I am pursuing Btech at SV University,Tirupati.I have completed my web development training from bolt iot company,bangalore.</p>
                         <p class="about__text">My strengths: I can interact with new people,smart working,self motivated and i have a positive attitude towards my life.</p>
-                        <p class="about__text">Interests : I'm very much interested in developing and designing websites.</p>
-                        <p class="about__text">Hobbies : Basket ball,Singing.
-                        <p class="about__text"> INTERMEDIATE : 985/1000 Marks </p>
-                        <p class="about__text"> SSC : 9.7/10 CGPA </p>
+                        <div class="about__text">Interests : I'm very much interested in developing and designing websites.</div>
+                        <div class="about__text">Hobbies : Basket ball,Singing.</div>
+                        <div class="about__text"> INTERMEDIATE : 985/1000 Marks </div>
+                        <div class="about__text"> SSC : 9.7/10 CGPA </div>
                         <p class="about__text"> My Work: I have built a face recognition application using python in GUVI also created many beautiful websites.</p>
                         <a href="https://sumapravallika-coffeeshop.tiiny.site" class="button">Visit suma's coffee world:)</a>
                         
