--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="orange suma.jpg" alt="">
+                        <img src="photo suma.jpg" alt="">
                     </div>
                    
                     <div>
