--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <img src="java python.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="suma guinnes.jpg" alt="">
+                        <img src="AI score.jpg" alt="">
                     </div>
                 </div>
             </section>
